Fix access to destroyed QRhi object

If QRhi is destroyed, the rhi member of QQuickWindowPriavte must also
be initialized. Otherwise, it remains a dangling pointer and causes
segmentation fault

Fixes: QTBUG-108252
Change-Id: Ic1b003d28da0fd1163f80a913d9ca3b4a8bb1e1b
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 5b24e324d34b30f17ab0c405b719d290929763e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>