src/quick/scenegraph/qsgthreadedrenderloop.cpp
@@ -505,6 +505,7 @@ void QSGRenderThread::invalidateGraphics(QQuickWindow *window, bool inDestructor
         if (ownRhi)
             QSGRhiSupport::instance()->destroyRhi(rhi);
         rhi = nullptr;
+        dd->rhi = nullptr;
         qCDebug(QSG_LOG_RENDERLOOP, QSG_RT_PAD, "- QRhi destroyed");
     } else {
         qCDebug(QSG_LOG_RENDERLOOP, QSG_RT_PAD, "- persistent GL, avoiding cleanup");
